# yafsm

./: .gitignore  Cargo.toml  LICENSE.md  README.md  SysdashNotes.bike
src/: dump.rs  event_loop.rs  logging.rs  main.rs  term.rs
src/backend/: error.rs  linux.rs  mod.rs  sysinfo.rs  sysmon.rs  util.rs
src/backend/linux/: data.rs  gpu.rs  io.rs  kernel.rs  mod.rs  network.rs  processes.rs
src/controller/: clock.rs  commands.rs  mod.rs
src/controller/states/: help.rs  mod.rs  monitor.rs
src/model/: cpu.rs  disk.rs  fs.rs  gpu.rs  io.rs  load.rs  memory.rs  mod.rs  network.rs  options.rs  process.rs  source.rs  state.rs  swap.rs
src/monitors/: mod.rs
src/view/: banner.rs  bin1c.rs  dashboard.rs  help.rs  infocols.rs  meter.rs  mod.rs  quicklook.rs  util.rs
src/view/dashboard/: banner.rs  iotables.rs  mod.rs  process_table.rs  quicklook.rs  summaries.rs
src/view/displays/: mod.rs
src/view/widgets/: infocols.rs  meter.rs  mod.rs  tablegrp.rs
