[package]
name = "yafsm"
version = "0.3.5"
edition = "2021"
license = "MIT"
authors = ["Michael Ekstrand <md@ekstrandom.net>"]
description = "System usage monitor inspired by glances."

[dependencies]
anyhow = "^1.0"
thiserror = "^2.0"
log = { version = "^0.4", features = ["release_max_level_debug"] }
fern = "^0.7"
clap = { version = "^4.4", features = ["derive"] }

itertools = "^0.14"
regex = "^1.10"

crossterm = "^0.29.0"
ratatui = { version = "^0.29" }

friendly = "^0.2"
chrono = "^0.4"

uzers = "^0.12"
sysinfo = { version = "^0.35" }

[target.'cfg(target_os="linux")'.dependencies]
procfs = "^0.17"
gethostname = "^1.0"
etc-os-release = "^0.1"
nix = { version = "~0.30", features = ["fs"] }
nvml-wrapper = "~0.10"
